--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-sweep-to-bottom"
+                  <a href="index.html" class="hvr-sweep-to-bottom"
                     ><span
                       ><i class="fas fa-home" aria-hidden="true"></i>Home</span
                     ></a
@@ -48,7 +48,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-sweep-to-bottom"
+                  <a href="resume.html" class="hvr-sweep-to-bottom"
                     ><span
                       ><i class="fas fa-graduation-cap" aria-hidden="true"></i
                       >Resume</span
@@ -58,7 +58,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-sweep-to-bottom"
+                  <a href="contact.html" class="hvr-sweep-to-bottom"
                     ><span
                       ><i class="far fa-comment" aria-hidden="true"></i
                       >Contact</span
@@ -68,7 +68,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-sweep-to-bottom"
+                  <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"
                     ><span
                       ><i class="fas fa-download" aria-hidden="true"></i
                       >Download</span
@@ -203,7 +203,7 @@
           <h5 class="uppercase general-sub">Download</h5>
           <p class="inline-block">
             Need a printable version of my CV? Download it here.
-            <a href="#" target="_blank" class="cv-pdf">
+            <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
               <i class="fas fa-download" aria-hidden="true"></i>
               <span class="sr-only">Download link.</span>
             </a>
